--- a/_config.yml
+++ b/_config.yml
@@ -91,9 +91,20 @@ deploy:
 #MarkDown配置
 ## Docs: https://github.com/celsomiranda/hexo-renderer-markdown-it/wiki/
 markdown:
+  render:
+    html: true
   plugins:
     - markdown-it-abbr
     - markdown-it-footnote
     - markdown-it-ins
     - markdown-it-sub
     - markdown-it-sup
+# toc:
+#   maxdepth: 3
+#   class: toc
+#   slugify: transliteration
+#   decodeEntities: false
+#   anchor:
+#     position: after
+#     symbol: '#'
+#     style: header-anchor
