--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "3.8.0"
   },
   "dependencies": {
-    "hexo": "^3.7.0",
+    "hexo": "^3.8.0",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
@@ -16,6 +16,7 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "hexo-toc": "^1.1.0"
   }
 }
